Bug tracker at http://code.google.com/p/psutil/issues

0.2.0 - XXXX-XX-XX
------------------

NEW FEATURES

 * Issue 79: per-process open files.
 * Issue 91: per-process send_signal() and terminate() methods.
 * Issue 95: NoSuchProcess and AccessDenied exception classes now provide a
   "pid" and a "msg" attribute.
 * Issue 97: per-process children.
 * Issue 98: Process.get_cpu_times() and Process.get_memory_info now return
   a namedtuple instead of a tuple.
 * Issue 103: per-process opened TCP and UDP connections.
 * Issue 111: per-process executable name.

BUGFIXES

 * Issue 94: suspend() raises OSError instead of AccessDenied.
 * Issue 86: psutil didn't compile against FreeBSD 6.x.
 * Issue 102: orphaned process handles obtained by using OpenProcess in C were 
   left behind every time Process class was instantiated.
 * Issue 111: path and name Process properties report erroneous values.

API CHANGES

 * psutil.Process.path property is deprecated and works as an alias for "exe"
   property.
 * psutil.Process.kill(): signal argument was removed - to send a signal to the 
   process use send_signal(signal) method instead.
 * psutil.Process.get_memory_info() returns a nametuple instead of a tuple.
 * psutil.cpu_times() returns a nametuple instead of a tuple.
 * New psutil.Process methods: get_open_files(), get_connections(), 
   send_signal() and terminate().


0.1.3 - 2010-03-02
------------------

NEW FEATURES

 * Issue 14: per-process username
 * Issue 51: per-process current working directory (Windows and Linux only)
 * Issue 59: Process.is_running() is now 10 times faster
 * Issue 61: added supoprt for FreeBSD 64 bit
 * Issue 71: implemented suspend/resume process
 * Issue 75: python 3 support

BUGFIXES

 * Issue 36: process cpu_times() and memory_info() functions succeeded also for
   dead processes while a NoSuchProcess exception is supposed to be raised.
 * Issue 48: incorrect size for mib array defined in getcmdargs for BSD